# Docr

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Docr_test.py  LICENSE  README.md  README_zh.md  Telos_test.py  demo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: deploy-docs.yml  main.yml  python-app.yml
api/: docly_api.py  docr_api.py  index.html  telos_api.py
development/: index.html
docly/: __init__.py  cmdline.py  docs_commands.py  log.py
docly/config/: __init__.py  settings.yml  settings1.py
docly/core/: __init__.py
docly/core/base/: __init__.py  model.py
docly/core/detection/: __init__.py  dbnet.py  lore.py  yolov8 copy.py  yolov8.py
docly/data/: __init__.py
docly/modules/: base.py  detformula.py  layout.py  ocr.py  table.py
docr/: __init__.py  cmdline.py
docr/config/: settings.yml
docr/modules/: base.py  layout.py  ocr.py  table.py
docr/utils/: __init__.py
guide/: index.html
search/: search_index.json
telos/: __init__.py  cmdline.py  log.py
telos/config/: __init__.py  settings.yml  settings1.py
telos/core/: __init__.py
telos/data/: __init__.py  types.py
telos/modules/: __init__.py  base.py  detformula.py  layout.py  ocr.py  table.py
telos/utils/: __init__.py  input.py  visual.py
tests/: __init__.py  conftest.py  test_api.py  test_cmdline.py  test_log.py  test_version.py  test_webui.py
tests/core/: test_detection.py  test_reading_order.py  test_recognition.py
tests/modules/: test_formula.py  test_layout.py  test_ocr.py  test_table.py
webui/: demo.py
(+21 files in other folders)
