[tool.poetry]
name = "docly"
version = "0.0.3"
description = "🛠️ Docly: A modular toolkit for intelligent document analysis and processing. Easy to expand and flexible to use, just like playing with building blocks!"
readme = "README.md"
authors = ["liferecords <yjmm10@yeah.net>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.12"
click = "^8.1.3"
pydantic = "^2.8.2"
onnxruntime = "^1.18.1"
shapely = "^2.0.5"
pyclipper = "^1.3.0.post5"
tokenizers = "^0.19.1"
opencv-python = "^4.10.0.84"
pymupdf = "^1.24.9"
pillow = "^10.4.0"
streamlit = "^1.37.1"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
psutil = "^6.0.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"
pytest-mock = "^3.14.0"
black = "^24.8.0"

[tool.poetry.scripts]
docly = "docly.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120